docs: fix broken example
