# docs/swagger.yaml
@@ -128,12 +128,8 @@ definitions:
     type: object
   controllers.GetDocumentContent.successResponseBody:
     properties:
-      content:
-        example: Hello, world!
-        type: string
-      title:
-        example: My first C program
-        type: string
+      document:
+        $ref: '#/definitions/models.Document'
     type: object
   controllers.GetDocumentHistories.failedResponseBody:
     properties:
@@ -393,6 +389,53 @@ definitions:
     properties:
       msg:
         example: Invalid request body
+        type: string
+    type: object
+  models.Document:
+    properties:
+      appendix:
+        type: string
+      approvedDate:
+        type: string
+      approver:
+        $ref: '#/definitions/models.User'
+      approverID:
+        description: foreign keys to User
+        type: integer
+      author:
+        $ref: '#/definitions/models.User'
+      authorID:
+        type: integer
+      comment:
+        type: string
+      content:
+        type: string
+      createdAt:
+        description: 建立時間（由GORM自動管理）
+        type: string
+      id:
+        type: integer
+      status:
+        description: EDIT, VERIFY, REJECT, APPROVE
+        type: string
+      title:
+        type: string
+      updatedAt:
+        description: 最後一次更新時間（由GORM自動管理）
+        type: string
+    type: object
+  models.User:
+    properties:
+      email:
+        type: string
+      id:
+        type: integer
+      identity:
+        description: user, admin
+        type: string
+      password:
+        type: string
+      username:
         type: string
     type: object
   router.CheckHealth.responseBody:
